# cookiecutter-rompy

./: README.rst  cookiecutter.json  setup.py
.github/workflows/: release.yml
{{cookiecutter.project_name}}/: .pre-commit-config.yaml  Makefile  README.rst  mkdocs.yml  pyproject.toml  requirements_dev.txt  tbump.toml
{{cookiecutter.project_name}}/.github/workflows/: build-docs.yml  python-publish.yml
{{cookiecutter.project_name}}/docs/: index.md  installation.md  usage.md
{{cookiecutter.project_name}}/docs/reference/: config.md
{{cookiecutter.project_name}}/scripts/: release.sh
{{cookiecutter.project_name}}/src/{{cookiecutter.project_slug}}/: config.py  data.py  grid.py  source.py
{{cookiecutter.project_name}}/src/{{cookiecutter.project_slug}}/templates/base/{{ '{{runtime.run_id}}' }}/: namelist
{{cookiecutter.project_name}}/tests/: test_config.py
