[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "{{cookiecutter.project_slug}}"
description = "{{cookiecutter.project_short_description}}"
readme = "README.rst"
authors = [
  {name = "{{cookiecutter.full_name}}", email = "{{cookiecutter.email}}"}
]
maintainers = [
  {name = "{{cookiecutter.full_name}}", email = "{{cookiecutter.email}}"}
]
classifiers = [

]
license = {text = "{{cookiecutter.open_source_license}}"}
dependencies = [
  "rompy",
  {% if cookiecutter.command_line_interface.lower() == "typer" -%}
  "typer"
{%- endif %}
]

dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "coverage",
    "mypy",
    "pytest",
    "ruff"
    "black"
    "requests"
]
docs = [
    "autodoc_pydantic",
    "ipython",
    "nbsphinx",
    "pydata_sphinx_theme",
    "sphinx<7.3.6",
    "sphinx-collections",
]
{% if cookiecutter.command_line_interface != "No command-line interface" %}
[project.scripts]
{{cookiecutter.project_slug}} = "{{cookiecutter.project_slug}}.cli:app"{% endif %}

[project.entry-points."rompy.config"]
{{ cookiecutter.model_name }} = "{{ cookiecutter.project_slug }}.config:Config"

[project.entry-points."rompy.source"]
# Register here any new source. For example:
# {{ cookiecutter.model_name.lower() }}_source_type = "{{ cookiecutter.project_slug }}.source:{{ cookiecutter.model_name.upper() }}Source"

[project.urls]
bugs = "https://github.com/{{cookiecutter.__gh_slug}}/issues"
changelog = "https://github.com/{{cookiecutter.__gh_slug}}/blob/master/changelog.md"
homepage = "https://github.com/{{cookiecutter.__gh_slug}}"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]

[tool.setuptools.dynamic]
version = {attr = "{{cookiecutter.project_slug}}.__version__"}
